--- a/swa-cli.config.json
+++ b/swa-cli.config.json
@@ -6,7 +6,8 @@
       "outputLocation": ".next",
       "appBuildCommand": "npm run build",
       "run": "npm run dev",
-      "appDevserverUrl": "http://localhost:3000"
+      "appDevserverUrl": "http://localhost:3000",
+      "apiDevserverUrl": "http://localhost:3000"
     }
   }
 }
